crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__struct_keyword_group_options_with_style_values.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C, u8)]
enum Foo<'a> {
    #[parse(one_must_occur)]
    First {
        #[atom(CssAtomSet::First)]
        first: Option<::css_parse::T![Ident]>,
        alignment_baseline: Option<crate::AlignmentBaselineStyleValue<'a>>,
        baseline_shift: Option<crate::BaselineShiftStyleValue<'a>>,
    },
    #[parse(one_must_occur)]
    Last {
        #[atom(CssAtomSet::Last)]
        last: Option<::css_parse::T![Ident]>,
        alignment_baseline: Option<crate::AlignmentBaselineStyleValue<'a>>,
        baseline_shift: Option<crate::BaselineShiftStyleValue<'a>>,
    },
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
