crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__struct_nonor_keyword_options.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(::stable_type_layout::TypeLayout)]
#[derive(
    ::csskit_derives::Parse,
    ::csskit_derives::Peek,
    ::csskit_derives::ToSpan,
    ::csskit_derives::ToCursors,
    ::csskit_derives::SemanticEq,
    ::csskit_derives::NodeWithMetadata,
    Debug,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[metadata(delegate)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
#[cfg_attr(feature = "visitable", derive(::csskit_derives::Visitable), visit(children))]
#[repr(C)]
#[parse(one_must_occur)]
struct FooOptions<'a> {
    #[cfg_attr(feature = "visitable", visit(skip))]
    #[atom(CssAtomSet::Weight)]
    pub weight: Option<crate::KeywordValue<'a, ::css_parse::T![Ident]>>,
    #[cfg_attr(feature = "visitable", visit(skip))]
    #[atom(CssAtomSet::Style)]
    pub style: Option<crate::KeywordValue<'a, ::css_parse::T![Ident]>>,
    #[cfg_attr(feature = "visitable", visit(skip))]
    #[atom(CssAtomSet::SmallCaps)]
    pub small_caps: Option<crate::KeywordValue<'a, ::css_parse::T![Ident]>>,
    #[cfg_attr(feature = "visitable", visit(skip))]
    #[atom(CssAtomSet::Position)]
    pub position: Option<crate::KeywordValue<'a, ::css_parse::T![Ident]>>,
}
#[cfg(test)]
::stable_type_layout::register!(FooOptions < 'static >);
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
struct Foo<'a>(pub crate::NoneOr<crate::FooOptions<'a>>);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
