crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__struct_with_variable_count_type.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C)]
struct Foo<'a>(
    pub ::css_parse::CommaSeparated<'a, crate::Value<'a, crate::AnimateableFeature>>,
);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
