crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__transform_origin_grammar.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
enum TransformOriginStyleValue {
    LeftCenterRightTopBottomLengthPercentage(
        crate::LeftCenterRightTopBottomLengthPercentage,
    ),
    LeftTop(
        #[atom(CssAtomSet::Left)]
        ::css_parse::T![Ident],
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    LeftCenter(
        #[atom(CssAtomSet::Left)]
        ::css_parse::T![Ident],
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    LeftBottom(
        #[atom(CssAtomSet::Left)]
        ::css_parse::T![Ident],
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    LeftLengthPercentage(
        #[atom(CssAtomSet::Left)]
        ::css_parse::T![Ident],
        (crate::LengthPercentage, Option<crate::Length>),
    ),
    CenterTop(
        #[atom(CssAtomSet::Center)]
        ::css_parse::T![Ident],
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    CenterCenter(
        #[atom(CssAtomSet::Center)]
        ::css_parse::T![Ident],
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    CenterBottom(
        #[atom(CssAtomSet::Center)]
        ::css_parse::T![Ident],
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    CenterLengthPercentage(
        #[atom(CssAtomSet::Center)]
        ::css_parse::T![Ident],
        (crate::LengthPercentage, Option<crate::Length>),
    ),
    RightTop(
        #[atom(CssAtomSet::Right)]
        ::css_parse::T![Ident],
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    RightCenter(
        #[atom(CssAtomSet::Right)]
        ::css_parse::T![Ident],
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    RightBottom(
        #[atom(CssAtomSet::Right)]
        ::css_parse::T![Ident],
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    RightLengthPercentage(
        #[atom(CssAtomSet::Right)]
        ::css_parse::T![Ident],
        (crate::LengthPercentage, Option<crate::Length>),
    ),
    LengthPercentageTop(
        crate::LengthPercentage,
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    LengthPercentageCenter(
        crate::LengthPercentage,
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    LengthPercentageBottom(
        crate::LengthPercentage,
        (::css_parse::T![Ident], Option<crate::Length>),
    ),
    LengthPercentage(
        crate::LengthPercentage,
        (crate::LengthPercentage, Option<crate::Length>),
    ),
    CenterCenterAnyOrder(
        (::css_parse::T![Ident], ::css_parse::T![Ident]),
        Option<crate::Length>,
    ),
    CenterTopAnyOrder(
        (::css_parse::T![Ident], ::css_parse::T![Ident]),
        Option<crate::Length>,
    ),
    CenterBottomAnyOrder(
        (::css_parse::T![Ident], ::css_parse::T![Ident]),
        Option<crate::Length>,
    ),
    LeftCenterAnyOrder(
        (::css_parse::T![Ident], ::css_parse::T![Ident]),
        Option<crate::Length>,
    ),
    LeftTopAnyOrder(
        (::css_parse::T![Ident], ::css_parse::T![Ident]),
        Option<crate::Length>,
    ),
    LeftBottomAnyOrder(
        (::css_parse::T![Ident], ::css_parse::T![Ident]),
        Option<crate::Length>,
    ),
    RightCenterAnyOrder(
        (::css_parse::T![Ident], ::css_parse::T![Ident]),
        Option<crate::Length>,
    ),
    RightTopAnyOrder(
        (::css_parse::T![Ident], ::css_parse::T![Ident]),
        Option<crate::Length>,
    ),
    RightBottomAnyOrder(
        (::css_parse::T![Ident], ::css_parse::T![Ident]),
        Option<crate::Length>,
    ),
}
