crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__transform_origin_replacement.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
enum TransformOriginStyleValue {
    PositionOne(crate::PositionOne),
    PositionTwo(crate::PositionTwo, Option<crate::Length>),
}
