crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__value_fixed_range_color2_optimized.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C)]
struct Foo<'a>(
    pub crate::Value<'a, crate::Color<'a>>,
    pub crate::Value<'a, crate::Color<'a>>,
);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
