crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__value_group_type_keyword.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo<'a> {
    Length(crate::CalcableValue<'a, crate::Positive<crate::Length>>),
    #[atom(CssAtomSet::LineThrough)]
    LineThrough(::css_parse::T![Ident]),
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
