crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__value_lone_custom_type.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
struct Foo(pub crate::CustomIdent);
