crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__value_lone_type.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C)]
struct Foo<'a>(pub crate::CalcableValue<'a, crate::Integer>);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
