crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__value_lone_type_with_lifetime.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
struct Foo<'a>(pub crate::Value<'a, crate::Image<'a>>);
